# bevy-voxel-engine

./: Cargo.toml  rust-toolchain.toml
examples/: features.rs  minimal.rs  sand.rs
examples/common/: character.rs  fps_counter.rs
src/: lib.rs  physics.rs
src/voxel_pipeline/: attachments.rs  mod.rs  voxel_world.rs  voxelization.rs
src/voxel_pipeline/compute/: animation.rs  automata.rs  automata.wgsl  clear.rs  mod.rs  physics.rs  physics.wgsl  rebuild.rs
src/voxel_pipeline/shaders/: bindings.wgsl  raytracing.wgsl  voxelization.wgsl
src/voxel_pipeline/trace/: mod.rs  node.rs  trace.wgsl
